fix vertical align on multi line result

--- a/public/less/wide-pc.less
+++ b/public/less/wide-pc.less
@@ -435,12 +435,14 @@ body>header {
 			display : block;
 		}
 		th{
+			vertical-align : top;
 			min-width : 50px;
 			text-align : right;
 			padding-right : 5px;
 			border-right : 1px solid gray;
 		}
 		td {
+			vertical-align : top;
 			padding-left : 10px;
 		}
 	}
